--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -96,3 +96,9 @@ $code-font-line-height-win: 20px;
 $margin: 9pt;
 $border-thickness: 1px;
 $corner-small: 8px;
+
+/*
+ * Functions
+ */
+
+ $fade-function: cubic-bezier(.02, .01, .47, 1);
