Fix attempt for page button text vcenter

--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -140,8 +140,7 @@
             top: 0px;
             left: 4px;
             right: 1px;
-            bottom: 5px;
-            line-height: 25px;
+            line-height: 2em;
             opacity: 0.8;
             transition: opacity 0.4s $fade-function;
         }
