--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -5,7 +5,7 @@
 |  | !__! |  |  |  |
 |  !______!  !__!  |  binary : tech art
 |
-|  @file Date selector control styles.
+|  @file Date selector directive styles.
 |----------------------------------------------------------
 |  @author Valeriy Novytskyy
 \*---------------------------------------------------------*/
@@ -454,6 +454,104 @@
     }
 }
 
+/* Monthly wrapper */
+.tag-page {
+  position: absolute;
+  top: 0px;
+  bottom: 20px;
+  width: 87px;
+  border-bottom: 2px solid $accent-color;
+
+  /* Hover state */
+  &:hover {
+    border-bottom: 2px solid darken($accent-color, 8%);
+  }
+
+  /* Underline */
+  &-footer {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    padding-top: 3px;
+    top: 100%;
+    text-align: center;
+    font-family: $small-font;
+    font-size: $small-font-size - 2;
+    color: $drop-shadow-light-color;
+    cursor: pointer;
+
+    /* Hover state */
+    &:hover {
+      color: $primary-color;
+    }
+  }
+
+  /* Dashed month separator */
+  &-separator {
+    position: absolute;
+    top: 1px;
+    bottom: 0px;
+    right: -3px;
+    border-right: 1px dashed $border-color;
+    outline-offset: 10px;
+    z-index: -1;
+  }
+
+  /* Left and right selection brackets */
+  &-bracket-left, &-bracket-right {
+    position: absolute;
+    fill: lighten($border-color, 3%);
+    z-index: 4;
+    pointer-events: none;
+  }
+
+  /* Mask underline before, after, and in the middle of bracket selection */
+  &-underline-mask {
+    position: absolute;
+    bottom: 18px;
+    height: 4px;
+    background: $accent-light-color;
+  }
+}
+
+/* Weekly tag stacked bar */
+.tag-bar {
+  position: absolute;
+  top: 10px;
+  bottom: 2px;
+  min-width: 22px;
+  z-index: 1;
+}
+
+/* Weekly tag block */
+.tag-block {
+  position: absolute;
+  width: 16px;
+  min-height: 6px;
+  border-left: 2px solid $accent-light-color;
+  border-right: 2px solid $accent-light-color;
+  border-top: 1px solid $accent-light-color;
+  border-bottom: 1px solid $accent-light-color;
+  cursor: pointer;
+}
+
+/* Hover state */
+.tag-bar:hover {
+  .tag-block {
+    &:before {
+      content: '';
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      right: -2px;
+      bottom: -2px;
+      box-shadow: 0px 0px 4px 0px $drop-shadow-light-color;
+      z-index: -2;
+    }
+  }
+}
+
+/* Tag colors */
 $electrical:  #12c0e1;
 $mechanical:  #fcd116;
 $software:    #a71d5d;
@@ -470,6 +568,7 @@ $painting:    #ee4a4e;
 $sculpture:   #ff840f;
 $crafts:      #67d5e9;
 
+/* Tag blocks */
 @mixin tagColors($color) {
   background: $color;
 
@@ -544,122 +643,6 @@ $crafts:      #67d5e9;
 
     &-crafts {
       @include tagColors($crafts);
-    }
-  }
-}
-
-.tag-page {
-  position: absolute;
-  top: 0px;
-  bottom: 20px;
-  width: 87px;
-  border-bottom: 2px solid $accent-color;
-
-  &:hover {
-    border-bottom: 2px solid darken($accent-color, 8%);
-  }
-
-  &-footer {
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    padding-top: 3px;
-    top: 100%;
-    text-align: center;
-    font-family: $small-font;
-    font-size: $small-font-size - 2;
-    color: $drop-shadow-light-color;
-    cursor: pointer;
-
-    &:hover {
-      color: $primary-color;
-    }
-  }
-
-  &-separator {
-    position: absolute;
-    top: 1px;
-    bottom: 0px;
-    right: -3px;
-    border-right: 1px dashed $border-color;
-    outline-offset: 10px;
-    z-index: -1;
-  }
-
-  &-bracket-left, &-bracket-right {
-    position: absolute;
-    fill: lighten($border-color, 3%);
-    z-index: 4;
-    pointer-events: none;
-  }
-
-  &-pointer {
-    position: absolute;
-    height: 5px;
-    left: 0px;
-    bottom: 2px;
-    stroke-width: 1px;
-    stroke: $primary-color;
-    fill: none;
-  }
-
-  &-underline-mask {
-    position: absolute;
-    bottom: 18px;
-    height: 4px;
-    background: $accent-light-color;
-  }
-}
-
-.tag-bar {
-  position: absolute;
-  top: 10px;
-  bottom: 0.9px;
-  min-width: 22px;
-  z-index: 1;
-}
-
-.tag-block {
-  position: absolute;
-  width: 16px;
-  min-height: 4px;
-  border: 2px solid $accent-light-color;
-  border-top: 1px solid $accent-light-color;
-  border-bottom: 1px solid $accent-light-color;
-  cursor: pointer;
-
-  &:last-child {
-    border-top: 2px solid $accent-light-color;
-  }
-
-  &:first-child {
-    border-bottom: 2px solid $accent-light-color;
-  }
-}
-
-.tag-bar:hover {
-  .tag-block {
-    border: 2px solid $background-color;
-    border-top: 1px solid $background-color;
-    border-bottom: 1px solid $background-color;
-
-    &:last-child {
-      border-top: 2px solid $background-color;
-    }
-
-    &:first-child {
-      border-bottom: 2px solid $background-color;
-    }
-
-    &:before {
-      content: '';
-      position: absolute;
-      top: -2px;
-      left: -2px;
-      right: -2px;
-      bottom: -2px;
-      box-shadow: 0px 0px 4px 0px $drop-shadow-light-color;
-      z-index: -2;
     }
   }
 }
