--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -17,6 +17,30 @@
     /* Expanded height */
     height: 130px;
 
+    /* Min scroll fade overlay */
+    &:before {
+        content: '';
+        position: absolute;
+        left: -1px;
+        top: 30px;
+        bottom: 40px;
+        width: 1px;
+        box-shadow: 0px 0px 5px 8px $accent-light-color;
+        z-index: 4;
+    }
+
+    /* Max scroll fade overlay */
+    &:after {
+        content: '';
+        position: absolute;
+        right: -1px;
+        top: 30px;
+        bottom: 40px;
+        width: 1px;
+        box-shadow: 0px 0px 5px 8px $accent-light-color;
+        z-index: 4;
+    }
+
     /* Background rectangle */
     &-background {
         position: absolute;
@@ -54,7 +78,7 @@
     &-view {
         position: absolute;
         left: 10px;
-        right: 10px;
+        right: 0px;
         top: 30px;
         bottom: 37px;
         overflow-x: hidden;
