Use css in tag rendering and correctly clamp block height

--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -507,6 +507,7 @@
   top: 0px;
   bottom: 20px;
   width: 87px;
+  margin-right: 6px;
   border-bottom: 2px solid $accent-color;
 
   /* Hover state */
