--- a/src/Styles/_media.desktop.scss
+++ b/src/Styles/_media.desktop.scss
@@ -246,6 +246,10 @@ main p {
   margin-left: 1.4em;
   margin-top: $margin;
   margin-bottom: $margin;
+  &::selection {
+    color: $background-color;
+    background: $focus-color;
+  }
 }
 
 body {
