--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -45,6 +45,8 @@ $drop-shadow-transparent-color: black;
 $warning-color: #E1B412;
 $error-color: #E11912;
 
+$focus-color: #ff5ac0;
+
 /*
  * Fonts
  */
