--- a/src/Views/Index.cshtml
+++ b/src/Views/Index.cshtml
@@ -12,7 +12,7 @@
 <!--[if IE 7]>      <html class="ie lt-ie10 lt-ie9 lt-ie8" lang="en" data-ng-app="zeroApp" data-user-agent> <![endif]-->
 <!--[if IE 8]>      <html class="ie lt-ie10 lt-ie9" lang="en" data-ng-app="zeroApp" data-user-agent> <![endif]-->
 <!--[if IE 9]>      <html class="ie lt-ie10" lang="en" data-ng-app="zeroApp" data-user-agent> <![endif]-->
-<html data-ng-app="zeroApp" data-user-agent>
+<html data-ng-app="zeroApp" data-user-agent data-focus-accessibility>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
