--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -11,16 +11,16 @@
 \*---------------------------------------------------------*/
 
 .date-selector {
-    /* Enable absolute positioning for children relative to self */
+    // Enable absolute positioning for children relative to self
     position: relative;
-
-    /* Clip tag view within left/right edges to simulate scrolling */
-    overflow: hidden;
-
-    /* Expanded height */
+    
+    // Expanded height
     height: 130px;
 
-    /* Min scroll fade overlay */
+    // Clip tag view within left/right edges to simulate scrolling
+    overflow: hidden;
+
+    // Min scroll fade overlay
     &:before {
         content: '';
         position: absolute;
@@ -32,7 +32,7 @@
         z-index: 4;
     }
 
-    /* Max scroll fade overlay */
+    // Max scroll fade overlay
     &:after {
         content: '';
         position: absolute;
@@ -44,7 +44,7 @@
         z-index: 4;
     }
 
-    /* Background rectangle */
+    // Background rectangle
     &-background {
         position: absolute;
         left: 0px;
@@ -54,7 +54,7 @@
         background-color: $accent-light-color;
         z-index: -1;
 
-        /* Top left corner cut-off */
+        // Top left corner cut-off
         &:before {
             content: '';
             position: absolute;
@@ -65,7 +65,7 @@
             top: 0px;
         }
 
-        /* Bottom right corner cut-off */
+        // Bottom right corner cut-off
         &:after {
             content: '';
             position: absolute;
@@ -77,7 +77,7 @@
         }
     }
 
-    /* Graph view */
+    // Graph view
     &-view {
         position: absolute;
         left: 10px;
@@ -88,7 +88,7 @@
         cursor: ew-resize;
     }
 
-    /* Page numbers strip */
+    // Page numbers strip
     &-pages {
         position: absolute;
         left: 36px;
@@ -99,7 +99,7 @@
         overflow: hidden;
     }
 
-    /* Page number button overrides for PC */
+    // Page number button overrides for PC
     .os-win &-page {
         font-size: $small-font-size-win;
         &-label {
@@ -107,7 +107,7 @@
         }
     }
 
-    /* Page number button */
+    // Page number button
     &-page {
         position: relative;
         float: left;
@@ -123,13 +123,21 @@
         margin-bottom: 10px;
         font-family: $small-font;
         font-size: $small-font-size;
-        color: $foreground-color;
+        color: lighten($foreground-color, 20%);
+        transition: color 0.2s $fade-function;
+        cursor: pointer;
+
+        // Fix Safari moving child elements on opacity change.
+        // http://stackoverflow.com/questions/12980153/image-moves-on-hover-chrome-opacity-issue
+        -webkit-transform: translateZ(0px);
+        -webkit-backface-visibility: hidden;
+
+        // Replaced browser focus outline with date-selector-page-focus-outline.
         border: none;
         outline: none;
         background: none;
-        cursor: pointer;
-
-        /* Hover */
+        
+        // Hover 
         &:hover {
             color: $foreground-color;
 
@@ -137,70 +145,56 @@
                 opacity: 1;
             }
 
-            .date-selector-page-label {
-                opacity: 1;
-            }
-
-            /* Hover selected */
             &.selected {
-                .date-selector-page-label {
-                    opacity: 1;
-                }
+                color: $background-color;
             }
         }
 
-        /* Focus */
+        // Focus (keyboard only)
         .show-focus-outlines &:focus {
             .date-selector-page-focus-outline {
                 display: block;
             }
         }
 
-        /* Selected */
+        // Selected 
         &.selected {
+            color: rgba($background-color, .7);
+
             .date-selector-page {
                 &-hover,
                 &-border {
                     display: none;
                 }
 
+                &-pushed,
                 &-border-pushed {
                     display: block;
-                }
-
-                &-pushed {
-                    display: block;
-                }
-
-                &-label {
-                    color: $background-color;
-                    opacity: 0.8;
                 }
             }
         }
 
-        /* Primitive fallback */
+        // Primitive fallback 
         &-fallback {
             position: relative;
             left: -100vw;
         }
 
-        /* Page number text including accessibility descriptor */
+        // Page number text including accessibility descriptor 
         &-label {
             position: absolute;
             top: 0px;
             left: 4px;
             right: 2px;
+            bottom: 0px;
             line-height: 26px;
-            opacity: 0.8;
-            transition: opacity 0.4s $fade-function;
 
-            /* Fix :active not shown on IE due to mouse events being eaten */
+            // Fix :active not shown on IE due to mouse events being eaten 
             height: 0px;
             pointer-events: none;
         }
 
-        /* Page number text */
+        // Page number text 
         &-number {
             position: absolute;
             left: 0;
@@ -210,12 +204,12 @@
             text-align: center;
         }
 
-        /* Group separator for large number of pages */
+        // Group separator for large number of pages 
         &-separator {
             color: $secondary-text-color;
             cursor: default;
 
-            /* Overrides for page button */
+            // Overrides for page button 
             &:before {
                 display: none;
             }
@@ -227,7 +221,6 @@
 
                 .date-selector-page-label {
                     color: $secondary-text-color;
-                    opacity: 1;
                 }
             }
 
@@ -237,7 +230,7 @@
                 }
             }
 
-            /* Overrides for children of page button */
+            // Overrides for children of page button 
             .date-selector-page {
                 &-border, &-background, &-outline, &-focus-outline {
                     display: none;
@@ -245,14 +238,14 @@
             }
         }
 
-        /* Page number sub-elements */
+        // Page number sub-elements 
         &-border,
         &-border-pushed,
         &-outline,
         &-background,
         &-hover,
         &-pushed {
-            /* Fix :active not shown on IE due to mouse events being eaten */
+            // Fix :active not shown on IE due to mouse events being eaten 
             pointer-events: none;
         }
         
@@ -273,6 +266,8 @@
             position: absolute;
             left: 0;
             top: 0;
+            right: 0;
+            bottom: 0;
         }
 
         &-pushed {
@@ -323,7 +318,7 @@
             transition: opacity 0.4s $fade-function;
         }
 
-        /* Bottom shadow */
+        // Bottom shadow 
         &:before {
             content: '';
             position: absolute;
@@ -336,36 +331,39 @@
         }
     }
 
-    /* Scroll buttons */
+    // Scroll buttons
     &-scroll {
-        color: $foreground-color;
+        color: lighten($foreground-color, 20%);
         height: 27px;
         border: none;
         outline: none;
         cursor: pointer;
 
-        /* Hover */
+        // Fix Safari moving child elements on opacity change.
+        // http://stackoverflow.com/questions/12980153/image-moves-on-hover-chrome-opacity-issue
+        -webkit-transform: translateZ(0px);
+        -webkit-backface-visibility: hidden;
+
+        // Hover 
         &:hover {
             color: $foreground-color;
 
             .date-selector-page-hover {
                 opacity: 1;
             }
-
-            .date-selector-page-label {
-                opacity: 1;
-            }
         }
 
-        /* Focused */
+        // Focused (keyboard only)
         .show-focus-outlines &:focus {
             .date-selector-page-focus-outline {
                 display: block;
             }
         }
 
-        /* Pushed */
+        // Pushed 
         &:active {
+            color: $background-color;
+
             .date-selector-page {
                 &-hover {
                     display: none;
@@ -373,10 +371,6 @@
 
                 &-pushed {
                     display: block;
-                }
-
-                &-label {
-                    color: $background-color;
                 }
 
                 &-border {
@@ -389,7 +383,7 @@
             }
         }
 
-        /* Arrow icon */
+        // Arrow icon 
         &-label {
             position: absolute;
             left: 13px;
@@ -398,16 +392,17 @@
             pointer-events: none;
         }
 
-        /* Arrow icon wrapper */
+        // Arrow icon wrapper 
         .date-selector-page-label {
             top: 0px;
             right: 0px;
             bottom: 5px;
+            left: 0px;
             line-height: 25px;
             text-align: center;
         }
 
-        /* Bottom shadow */
+        // Bottom shadow 
         &:before {
             content: '';
             position: absolute;
@@ -417,7 +412,7 @@
             box-shadow: 0 $border-thickness ($border-thickness * 2) $drop-shadow-dark-color;
         }
 
-        /* Left scroll button */
+        // Left scroll button 
         &-left {
             position: absolute;
             left: 10px;
@@ -425,25 +420,25 @@
             width: 30px;
             z-index: 1;
 
-            /* Arrow icon wrapper */
+            // Arrow icon wrapper 
             .date-selector-page-label {
                 left: 1px;
                 top: -1px;
             }
 
-            /* Focus outline */
+            // Focus outline
             .date-selector-page-focus-outline {
                 left: -1px;
             }
 
-            /* Bottom shadow */
+            // Bottom shadow 
             &:before {
                 right: 6px;
                 z-index: -3;
             }
         }
 
-        /* Right scroll button */
+        // Right scroll button 
         &-right {
             position: relative;
             float: left;
@@ -451,12 +446,12 @@
             height: 27px;
             margin-top: 1px;
 
-            /* Arrow icon wrapper */
+            // Arrow icon wrapper 
             .date-selector-page-label {
                 left: 2px;
             }
 
-            /* Bottom shadow */
+            // Bottom shadow 
             &:before {
                 right: 5px;
                 z-index: -3;
@@ -464,58 +459,59 @@
         }
     }
 
-    /* Expand/collapse caption button */
+    // Expand/collapse caption button 
     &-caption {
         position: absolute;
         left: 10px;
         top: 10px;
 
-        &:focus {
+        // Focused (keyboard only)
+        .show-focus-outlines &:focus {
             color: $focus-color;
         }
     }
 
-    /* Collapsed state overrides */
+    // Collapsed state overrides 
     &.collapsed {
         margin-top: -2px;
         margin-bottom: -7px;
         margin-left: 11px;
         overflow: visible;
 
-        /* Min scroll fade overlay */
+        // Min scroll fade overlay 
         &:before {
             display: none;
         }
 
-        /* Max scroll fade overlay */
+        // Max scroll fade overlay 
         &:after {
             display: none;
         }
 
         .date-selector {
-            /* Expand/collapse caption button */
+            // Expand/collapse caption button 
             &-caption {
                 position: absolute;
                 left: -7px;
                 top: 10px;
             }
 
-            /* Background rectangle */
+            // Background rectangle 
             &-background {
                 background: $background-color;
             }
 
-            /* Graph view */
+            // Graph view 
             &-view {
                 display: none;
             }
 
-            /* Pages strip */
+            // Pages strip 
             &-pages {
                 bottom: -13px;
             }
 
-            /* Left scroll button - collapsed overrides */
+            // Left scroll button - collapsed overrides 
             &-scroll-left {
                 bottom: 2px;
             }
@@ -523,7 +519,7 @@
     }
 }
 
-/* Monthly wrapper */
+// Monthly wrapper 
 .tag-page {
   position: absolute;
   top: 0px;
@@ -532,12 +528,12 @@
   margin-right: 6px;
   border-bottom: 2px solid $accent-color;
 
-  /* Hover state */
+  // Hover state 
   &:hover {
     border-bottom: 2px solid darken($accent-color, 8%);
   }
 
-  /* Underline */
+  // Underline 
   &-footer {
     position: absolute;
     left: 0px;
@@ -550,13 +546,13 @@
     color: $drop-shadow-light-color;
     cursor: pointer;
 
-    /* Hover state */
+    // Hover state 
     &:hover {
       color: $primary-color;
     }
   }
 
-  /* Dashed month separator */
+  // Dashed month separator 
   &-separator {
     position: absolute;
     top: 1px;
@@ -567,7 +563,7 @@
     z-index: -1;
   }
 
-  /* Left and right selection brackets */
+  // Left and right selection brackets 
   &-bracket-left, &-bracket-right {
     position: absolute;
     fill: lighten($border-color, 3%);
@@ -575,7 +571,7 @@
     pointer-events: none;
   }
 
-  /* Mask underline before, after, and in the middle of bracket selection */
+  // Mask underline before, after, and in the middle of bracket selection 
   &-underline-mask {
     position: absolute;
     bottom: 18px;
@@ -584,7 +580,7 @@
   }
 }
 
-/* Weekly tag stacked bar */
+// Weekly tag stacked bar 
 .tag-bar {
   position: absolute;
   top: 12px;
@@ -593,7 +589,7 @@
   z-index: 1;
 }
 
-/* Weekly tag block */
+// Weekly tag block 
 .tag-block {
   position: absolute;
   width: 16px;
@@ -605,7 +601,7 @@
   cursor: pointer;
 }
 
-/* Hover state */
+// Hover state 
 .tag-bar:hover {
   .tag-block {
     &:before {
@@ -621,7 +617,7 @@
   }
 }
 
-/* Tag colors */
+// Tag colors 
 $electrical:  #12c0e1;
 $mechanical:  #fcd116;
 $software:    #a71d5d;
@@ -638,7 +634,7 @@ $painting:    #ee4a4e;
 $sculpture:   #ff840f;
 $crafts:      #67d5e9;
 
-/* Tag blocks */
+// Tag blocks 
 @mixin tagColors($color) {
     background: $color;
     transition: background 0.2s ease-in;
